package seedu.nusmodsplus;

public class Command {

    public Command() {}

    public void execute(TaskList tasks, Ui ui, Storage storage) {
    }

    public boolean isExit() {
        return true;
    }
}
