package seedu.nusmodsplus;

public class Task { // consider making abstract if every task is a subclass
    private String description;
}
