@startuml ActivityDiagram
'https://plantuml.com/class-diagram

!include style.puml
skinparam arrowThickness 1
skinparam arrowColor Black

hide member

package activity {
class ActivityList
class Activity <<abstract>>
class SchoolActivity <<abstract>>
class Task
class XYZActivityClasses
}


class Notebook
class Command
class Ui


Notebook -left..> Activity
SchoolActivity -right--> Activity
ActivityList -left-->"*" Activity : contains
Task -up--> Activity
XYZActivityClasses -up-->SchoolActivity
Notebook -left...> ActivityList : Stores values of
Command -up..> ActivityList : modifies
Command -right..>Ui
ActivityList *-- Notebook : Reads from

@enduml